@startuml

title __LIBRARY's Class Diagram__\n

  namespace Members.Library {
    class Members.Library.DiscountCode {
        + DiscountCode()
        + getMemberDescription()
        + getMemberDiscountRate()
    }
  }
  

  namespace Members.Library {
    class Members.Library.DriverTest {
        {static} + main()
    }
  }
  

  namespace Members.Library {
    class Members.Library.basicMemberDiscount {
        + getMemberDescription()
        + getMemberDiscountRate()
    }
  }
  

  namespace Members.Library {
    class Members.Library.guest {
        + getMemberDiscountRate()
        + guest()
    }
  }
  

  namespace Members.Library {
    class Members.Library.longTermMember {
        + getMemberDiscountRate()
        + longTermMember()
    }
  }
  

  namespace Members.Library {
    abstract class Members.Library.member {
        ~ discountedPrice : int
        ~ memberDescription : String
        + getMemberDescription()
        {abstract} + getMemberDiscountRate()
    }
  }
  

  namespace Members.Library {
    abstract class Members.Library.memberDecorator {
        {abstract} + getMemberDescription()
    }
  }
  

  namespace Members.Library {
    class Members.Library.overSixtyMember {
        + getMemberDiscountRate()
        + overSixtyMember()
    }
  }
  

  namespace Members.Library {
    class Members.Library.studentMember {
        + getMemberDiscountRate()
        + studentMember()
    }
  }
  

  Members.Library.DiscountCode -up-|> Members.Library.memberDecorator
  Members.Library.basicMemberDiscount -up-|> Members.Library.member
  Members.Library.guest -up-|> Members.Library.member
  Members.Library.longTermMember -up-|> Members.Library.member
  Members.Library.memberDecorator -up-|> Members.Library.member
  Members.Library.memberDecorator o-- Members.Library.member : member
  Members.Library.overSixtyMember -up-|> Members.Library.member
  Members.Library.studentMember -up-|> Members.Library.member


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
